recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  
	if (l == Nil)
  return 0
  if(l.head < l.tail)
  return l.head
  else
  if(l.tail < l.head)
  return min(l.tail)

  
  
}